# job-ai

./: .env.example  .gitignore  justfile  pyproject.toml  resume.yaml
cache/: resume_embeddings.npz
config/: base.yaml
notebooks/: pipeline.ipynb  resume.ipynb  score.ipynb  scrape.ipynb
src/: export_eval.py  pipeline.py  resume.py  revise.py  score.py  scraper.py
